--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "static-site",
+  "name": "professional-readme-creator",
   "version": "1.0.0",
-  "description": "",
+  "description": "readme generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IanMilli/Professional-ReadMe-Creator.git"
+  },
+  "keywords": [
+    "readme",
+    "generator"
+  ],
+  "author": "Ian Millichamp",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/IanMilli/Professional-ReadMe-Creator/issues"
+  },
+  "homepage": "https://github.com/IanMilli/Professional-ReadMe-Creator#readme"
 }
