followed Danes video and created node modules and then made test to ensure git ignore is working correctly

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/IanMilli/Professional-ReadMe-Creator/issues"
   },
-  "homepage": "https://github.com/IanMilli/Professional-ReadMe-Creator#readme"
+  "homepage": "https://github.com/IanMilli/Professional-ReadMe-Creator#readme",
+  "dependencies": {
+    "inquirer": "^9.1.4"
+  }
 }
